--- a/main.css
+++ b/main.css
@@ -36,6 +36,12 @@ button {
   cursor: pointer;
   box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
   padding: 15px;
+  transition: background-color 0.3s ease-in;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
 }
 
 .about__image {
@@ -77,5 +83,106 @@ margin-top: 20px;
 }
 
 .about__info {
-max-width: 500px;
+  max-width: 500px;
+}
+
+.form__container {
+  width: 550px;
+}
+
+.form {
+  background-color: #1D263A;
+  color: white;
+  padding-top: 115px;
+  padding-bottom: 115px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.form h1 {
+  font-size: 48px;
+}
+
+.form p {
+  font-size: 18px;
+  opacity: 0.65;
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.form form {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 60px;
+}
+
+.form label {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.form input, 
+.form select {
+font-size: 18px;
+color: #213053;
+height: 60px;
+padding: 0px 20px 0px;
+border: none;
+border-radius: 15px;
+}
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+  padding-top: 40px;
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+footer {
+  padding: 90px 20px 90px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__group {
+  padding-right: 80px;
+}
+
+.footer__group h3 {
+  font-size: 16px;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__links a {
+  margin-bottom: 15px;
+}
+
+.footer__copyright {
+  padding-top: 40px;
+  text-align: center;
+  opacity: 0.5;
 }
